Tailwind converted successfully

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "WattWise MVP Screen Designs",
+      "name": "Energico",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
